@@ -6,6 +6,7 @@ Minicraft+ version 2.1.0
 * Fixed issue where level 2 airwizard would load with 250% health
 * Fixed crash when deleting world
 * Fixed rendering of stair tiles in sky level
+* Fixed rendering of cloud cactus in sky level
 * Prevented animals and mobs from despawning while in view
 * Prevented furniture from being pushed over stairs
 * Shear loses durability when used on sheep
